@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution of
 # this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: error.test,v 1.10.2.12 2010/03/18 14:39:15 dgp Exp $
+# RCS: @(#) $Id: error.test,v 1.10.2.13 2010/03/23 14:07:34 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -883,10 +883,10 @@ rename addmsg {}
 
 test error-20.1 {bad code name in on handler} -body {
     try { list a b c } on foo {} {}
-} -returnCodes error -match glob -result {bad code *}
+} -returnCodes error -match glob -result {bad completion code *}
 test error-20.2 {bad code value in on handler} -body {
     try { list a b c } on 34985723094872345 {} {}
-} -returnCodes error -match glob -result {bad code *}
+} -returnCodes error -match glob -result {bad completion code *}
 
 test error-21.1 {memory leaks in try: Bug 2910044} memory {
     leaktest {
