@@ -1,3 +1,10 @@
+2010-03-23  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclCmdMZ.c      Make error message in "try" implementation
+	* generic/tclCompCmdsSZ.c exactly the same as the one in "return"
+	* tests/error.test
+	* libtommath/mtests/mpi.c Single "const" addition
+
 2010-03-22  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclCmdMZ.c:	[Bug 2973361]: Compute the correct integer
